# openapi2mcp

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
examples/: cyclic_openapi.yaml  cyclic_server.py  debug_fastmcp.py  example_openapi.yaml  manual_fastmcp_test.py  server.py  server.py.llms.txt  server_http.py  server_http_verify.py  server_http_verify.py.llms.txt  server_sse.py  server_stdio.py  test_cyclic_import.py
openapi2mcp/: __init__.py  cli.py  generator.py  parser.py
tests/: test_e2e_generation.py  test_generator.py  test_parser.py
tests/fixtures/: invalid_yaml.yaml  spec_with_tools.yaml  valid_spec.yaml
